--- a/springboot_jsp/src/main/webapp/index.html
+++ b/springboot_jsp/src/main/webapp/index.html
@@ -59,7 +59,7 @@
     		var level = levelObjS.options[levelObjS.selectedIndex].value;
     		
     		var teamObjS = document.getElementById("team");
-    		var teamId = levelObjS.options[teamObjS.selectedIndex].value;
+    		var teamId = teamObjS.options[teamObjS.selectedIndex].value;
     		
     		question.weight = weight;
     		question.speciesId = speciesId;
